--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,83 @@
 * {
   box-sizing: border-box;
 }
-.start{
+
+.start{width: 80vw;
+  height: auto;
   display:flex;
   flex-flow: column;
-  align-items: center;
-  width: 80vw;
-  height: auto;
+  align-items: center;  
+}
+.welcomeTitle{  
+  font-family: 'Inter', sans-serif;
+font-family: 'Rubik Iso', cursive;
 }
 .welcomePage{
+  background-color: #FAE7A5;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  align-content: center;
+  align-items: center;
   flex-flow: column;
   justify-content: center;
-  border: 2px solid red;
-  width: 98vw;
-  height: 50vw;
 }
-.welcomeTitle{
-  align-self: center;
+.startButton-container{
+  text-decoration: none;
+  width: 20vw;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.startButton:active{
+  box-shadow: inset 0 0 30px rgba(110, 110, 110, 0.9);
 }
 .startButton{
-  align-self: center;
+  background-color: rgb(168, 230, 255);
+  font-size: 2rem;
+  margin-top: 2rem;
   max-width: 200px;
-  height: 50px;
+  height: 80px;
+  width: 200px;
+  text-align: center;
+  border: none;  
+  border-radius: 10px;
 }
-
-.title{
-  width: 50vw;
-  line-height: 30px;
+.quiz-container{
+  background-color: rgb(168, 230, 255);
+  border:2px solid black;
+  width: 100vw;
+  display: flex;
+  flex-flow: column;
+  align-items:center;
+  justify-content: center;
 }
+.quiz-container > h3 {
+  margin: 5vh 0 2vh 0;
+}
+/*Orange (#F9B872, #FAE7A5), powder blue #B6E1E7*/
 .quizQuestions{
-  border: 2px solid blue;
+  border: 5px solid rgba(0, 0, 255, 0.4);
+  background-color: #B6E1E7;
   border-radius: 10px;
   padding: 10px 0px 10px 5px;
-  width: 300px;
+  min-width: 300px;
+  width: 20vw;
   display: flex;
   flex-flow: column;
   justify-items: center;
   align-items: flex-start;    
 }
 .quizBox{
-  border: 2px solid black;
+  border: 5px solid #F9B872;
+  background-color: #FAE7A5;
   border-radius: 10px;
-  margin: 5px;
-  width: 75vw;
+  margin: 2rem;
+  width: 65vw;
   padding: 20px;
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
 }
 .choices{
@@ -57,7 +86,62 @@
 .question{
   font-size: 200px;
 }
-.btton{
-  max-width: 200px;
-  
+.submit-button-container{
+ display: flex;
+ justify-content: center;
+}
+.submit-button{
+  font-size: 30px;
+  margin: 2rem;
+  border: none;  
+  border-radius: 10px;
+  height: 80px;
+  width: 300px;
+}
+.submit-button:active{
+  background-color: rgba(1, 255, 1, 0.5);
+  box-shadow: inset 0 0 30px rgba(110, 110, 110, 0.9);
+}
+
+#endgame{
+  background-color: #FAE7A5;
+  background-image: URL(https://images.unsplash.com/photo-1484069560501-87d72b0c3669?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+#score{
+  height: 5vh;
+  font-size: 1.5rem;
+}
+.endgame-text{
+  color: rgba(230, 255, 1, 0.9);
+}
+#endgame-button{
+  font-size: 2rem;
+  padding: 20px;
+  background-color: rgba(0, 0, 255, 0.4);
+}
+#endgameover{
+  font-size: 70px;
+}
+#loading{
+  font-size: 100px;
+}
+#loading-desc{
+  font-size: 50px;
+}
+#loading-container{
+  height: 100vh;
+  background-color: rgb(255,203,45);
+  display: flex;
+  flex-flow: column;
+  justify-items: center;
+  align-items: center;
+}
+#loading-image{
+  height: 100px;
 }
