--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ font-family: 'Rubik Iso', cursive;
   background-color: #FAE7A5;
   border-radius: 10px;
   margin: 2rem;
+  min-width: 350px;
   width: 65vw;
   padding: 20px;
   display: flex;
