--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ font-family: 'Rubik Iso', cursive;
   margin: 2rem;
   min-width: 350px;
   width: 65vw;
+  min-height: 300px;
   padding: 20px;
   display: flex;
   flex-flow: column;
