--- a/src/App.css
+++ b/src/App.css
@@ -106,9 +106,11 @@ input[type="radio"]:checked + span {
 }
 input[type="radio"]:checked + span.highlight {
   background-color: green;
+  border: 3px solid yellow;
 }
 input[type="radio"]:checked + span.wrong {
   background-color: red;
+  border: 3px solid yellow;
 }
 .question{
   width: auto;
