--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,12 @@
 }
 .startButton-container{
   text-decoration: none;
-  width: 20vw;
-  height: 10vh;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
+  height: 80px;
+  width: 200px;  
+  border-radius: 10px;
 }
 .startButton:active{
   box-shadow: inset 0 0 30px rgba(110, 110, 110, 0.9);
@@ -42,6 +43,7 @@
   text-align: center;
   border: none;  
   border-radius: 10px;
+  cursor:pointer;
 }
 .quiz-container{
   background-color: rgb(168, 230, 255);
@@ -80,50 +82,70 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-span{ 
-  border: 2px solid black;
-  background-color: rgb(140, 200, 255);
+
+.choices{
+  display: flex;
   width: 300px;
   padding: 20px;
   height: auto;
 }
-.choices{
-  margin-right: 0px;
-  text-align: center;
-  min-width: 170px;
-  width: 220px;
-  min-height: 160px;
-  height: auto;
-  display: flex;
-  align-items: center;
-}
 label{
   line-height: 30px;
   font-size: 15px;
+  height: auto; 
+  width: 250px; 
+  align-items: center;
+  justify-items: center;
+  display: flex;
 }
-input[type="radio"]:checked + span {
-  background-color: rgb(255, 255, 100);
+ p.label-text{ 
+  width: 250px;
   padding: 20px;
+  margin: auto;
+  margin-left: -25px;
+  justify-items:flex-start;
+  border: 2px solid black;
+  background-color: rgb(140, 200, 255)
+}
+input.question{
+  visibility: collapse;
+}
+/*checked answer*/
+input[type="radio"]:checked ~ p {
+  background-color: rgb(255, 255, 100); 
   width: 250px;
   height: auto;
   border-radius: 16px;
 }
-input[type="radio"]:checked + span.highlight {
+
+/*checked answer after clicking submit*/
+input[type="radio"]:checked + p.highlight {
   background-color: green;
   border: 3px solid rgb(255, 255, 100);
-  box-shadow: 0 0 30px rgb(110, 110, 110);
-  
+  box-shadow: 0 0 30px rgb(110, 110, 110);  
 }
-input[type="radio"]:checked + span.wrong {
+input[type="radio"]:checked + p.wrong {
   background-color: red;
   border: 3px solid rgb(255, 255, 100);
   box-shadow: 0 0 30px rgba(110, 110, 110, 0.9);
 }
-.question{
-  width: auto;
-  height: auto; 
-  visibility: hidden;
+
+/*unchecked answer after clicking submit*/
+label > p.highlight{
+  background-color: green ;
+  width: 250px;
+  height: auto;
+  border-radius: 16px;
+  z-index: 42;
 }
+label > p.wrong{
+  background-color: red ;
+  width: 250px;
+  border-radius: 16px;
+  z-index: 22;
+}
+
+
 .submit-button-container{
  display: flex;
  justify-content: center;
@@ -184,21 +206,7 @@ input[type="radio"]:checked + span.wrong {
 #loading-image{
   height: 100px;
 }
-.highlight{
-  background-color: green;
-  width: 300px;
-  height: auto;
-  padding: 20px;
-  border-radius: 16px;
-  z-index: 4;
-}
-.wrong{
-  border-radius: 16px;
-  background-color: red;
-  padding: 20px;
-  width: 300px;
-  z-index: 2;
-}
+
 @media (min-width: 1025px) and (max-width: 1430px){
   
 .quizQuestions{
@@ -209,24 +217,38 @@ input[type="radio"]:checked + span.wrong {
 }
 @media (max-width: 1024px) {
   label{
-    line-height: 2px;
+    line-height: auto;
     font-size: 13px;
   }
-  .endgame-text{
-    font-size: 10px;
-  }
+  
   .quizQuestions{
     border: 5px solid rgba(0, 0, 255, 0.4);
     background-color: #B6E1E7;
     padding: 10px 0px 10px 25px;
-    height: 400px;
+    height: 450px;
     width: 200px;  
     grid-template-columns: 1fr;
     align-items: center;
-    grid-template-rows: 90px 90px 90px 90px;
+    grid-template-rows: 100px 100px 100px 100px;
+  }
+  .choices{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 240px;
+    padding: 20px;
+    height: auto;
+  }
+  label{
+    width: auto;
+    height: auto;
+    justify-content: space-between;
   }
   #endgameover{
     padding-left: 50px;
+  }
+  .endgame-text{
+    font-size: 10px;
   }
   .loading-text, .welcomeTitle, .startButton{
     font-size: 1rem !important;
